2nd attempt to deploy

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rick3mrtz.github.io/rmrtz-portfolio",
+  "homepage": "https://rick3mrtz.github.io/RMrtz-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
